# agora-data-tools

./: .gitignore  .pre-commit-config.yaml  AG-452.yaml  AG-469_config.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Pipfile  README.md  config.yaml  dev_config.yaml  gx_metabolomics.py  modelad_test_config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_config.yaml  test_gene_info.yaml
.github/: CODEOWNERS
.github/workflows/: dev.yml  prod.yml  testing.yml
agoradatatools/: errors.py  extract.py  load.py  process.py  transform.py  utils.py
agoradatatools/etl/: extract.py  load.py  test.py  transform.py  utils.py
data_analysis/: AG-184.ipynb
data_analysis/agora/input/: gwas_gvc_compiled_list.xlsx
data_analysis/agora/notebooks/: AG-1563_Preprocess_Pharos_Class.ipynb
data_analysis/agora/output/: metabolomics.feather
data_analysis/input/: gwas_gvc_compiled_list.xlsx
data_analysis/model_ad/notebooks/: MG-40_Create_harmonized_pathology_source_file.rmd  MG-88_Create_harmonized_biomarkers_source_file.rmd  MG-8_Create_ENSMUSG_Reference.rmd
data_analysis/notebooks/: AG-171.ipynb  AG-175.ipynb  AG-186.ipynb  AG-188_networks.ipynb  AG-202.ipynb  AG-452.ipynb  AG-452_rnaseq_differential_expression.ipynb  AG-469_updated_gene_info.ipynb  AG-866_process_srm_data.ipynb  AG-866_process_srm_diffexp_data.ipynb  AG-896_Preprocess_Gene_Annotations.ipynb  agora_truth_tables.ipynb  gene_info_py.ipynb  proteomics_distribution_data_documentation.ipynb
dataexploration/: gene_info.ipynb
great_expectations/gx/: .gitignore
great_expectations/gx/expectations/: metabolomics.json
gx_suite_definitions/: biodomain_info.ipynb  biomarkers.ipynb  distribution_data.ipynb  gene_info.ipynb  genes_biodomains.ipynb  metabolomics.ipynb  network.ipynb  neuropath_corr.ipynb  overall_scores.ipynb  pathology.ipynb  proteomics.ipynb  proteomics_distribution_data.ipynb  proteomics_srm.ipynb  proteomics_tmt.ipynb  rna_distributinon_data.ipynb  rnaseq_differential_expression.ipynb  target_exp_validation_harmonized.ipynb  team_info.ipynb
src/agoradatatools/: __init__.py  __main__.py  constants.py  errors.py  gx.py  logging.py  logs.py  process.py  reporter.py
src/agoradatatools/etl/: extract.py  load.py  test.py  transform.py  utils.py
src/agoradatatools/etl/transform/: __init__.py  (+18 more)
staging/: teams
tests/: __init__.py  conftest.py  test_extract.py  test_gx.py  test_load.py  test_process.py  test_reporter.py  test_transform.py  test_utils.py
tests/load/: test_load.py  test_numpyencoder.py
tests/test_assets/: bad_config.yaml  bad_config_parsing.yaml  bad_config_scanning.yaml  test_file.csv  test_file.feather  test_file.json  test_file.tsv
tests/test_assets/gx/: checkpoint_result_fail.json  checkpoint_result_pass.json  metabolomics.json  not_supported_dataset.json
tests/test_load/: test_load.py  test_numpyencoder.py
tests/test_transform/: test_transform_genes_biodomains.py  test_transform_utils.py
tests/transform/: test_biodomain_info.py  test_biomarkers.py  test_distribution_data.py  test_gene_info.py  test_genes_biodomains.py  test_immunohisto_transform.py  test_modelAD_general_transform.py  test_overall_scores.py  test_proteomics.py  test_proteomics_distribution_data.py  test_rna_distribution_data.py  test_rnaseq_differential_expression.py  test_team_info.py  test_transform_genes_biodomains.py
(+186 files in other folders)
