[metadata]
name = agora-data-tools
description = "A collection of tools that can be used to work with Agora's data"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sage-Bionetworks/agora-data-tools
author = mfazza, Informatics & Biocomputing - Sage Bionetworks
author_email = accmattfazza@gmail.com, infobiocomp@sagebionetworks.org
license = Apache
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/Sage-Bionetworks/agora-data-tools/issues
    Source Code = https://github.com/Sage-Bionetworks/agora-data-tools

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas==1.2.4
    numpy~=1.24
    pytest~=7.2
    setuptools~=67.0.0
    synapseclient~=2.7.0
    PyYAML~=6.0
    pyarrow~=11.0
    typer~=0.7.0
python_requires = >=3.7, <3.10
include_package_data = True
zip_safe = False
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    adt = agoradatatools.process:app
